=================== Release 1.0 2017-03-01 =====================
Description
    * First version of the App.
Changes
    * Version 1.0 Build 01 (2017/03/01)
        * Standarized checks before adding a task. (2017/03/01)
        * Excluded tasks marked as NOT APPLICABLE from SR. (2017/03/01)
        * Added support for copy the objects we add to each queue. (2017/02/28)
        * Added support for editing a task's name. (2017/02/28)
        * Added support for receiving notifications while the App is in the foreground. (2017/02/28)
        * Corrected minor bug in computation of SR for a day. (2017/02/28)
        * Added support for first day. (2017/02/28)
        * Added support for DilateQueues in each project. (2017/02/28)
        * Made sorting & adding views floating. Also minor modification to the system for computing height of a component from the bottom. (2017/02/27)
        * Added support for a displayable floating menu for each view that contains a table or tables. (2017/02/27)
        * Improved support for tasks marked as "NOT APPLICABLE". (2017/02/27)
        * Changed "1 running days" for "1 running day". (2017/02/27)
        * Added support for OSR & SR. (2017/02/27)
        * Removed support for this 3 task states: VERIFY, VERIFIED, NOT VERIFIED. (2017/02/27)
        * Modified sizes of inputs for core data. (2017/02/26)
        * Removed size limitations to core data. (2017/02/26)
        * Added support for adding local notifications to each project for starting & closing times. (2017/02/25)
        * Added base support for local notifications. (2017/02/25)
        * Corrected bug where tasks where being marked as NOT DONE before the working day begins. (2017/02/25)
        * Added support for PendingQueues in each project. Also added support for sanity checks when loading tasks. (2017/02/24)
        * Added support for checking if the day is current or not, and allow editing based on that. (2017/02/23)